# SotF

./: .gitignore  BUILD.md  Cargo.toml  Justfile  README.md  WARP.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
docs/: BUILD.md  SIGNING.md
scripts/: check-signing.sh  test-tauri-audio.sh
src-audio-capture/: index.html  package-lock.json  package.json  vite.config.ts
src-audio-capture/src/: capture-controller.ts  capture-graph.ts  capture-modal-manager.ts  capture-storage.ts  csv-export.ts  device-manager.ts  main.ts  styles.css  sweep-database.ts
src-audio-capture/src-tauri/: Cargo.toml  tauri.conf.json
src-audio-capture/src-tauri/src/: lib.rs  main.rs
src-audio-capture/src/tests/: capture-storage.test.ts  csv-export.test.ts  index.test.ts  storage-integration.test.ts
src-audio-player/: package-lock.json  package.json
src-audio-player/scripts/: build-audio-player.js
src-audio-player/tests/: audio-math.test.ts  audio-player.test.ts  audio-processor.test.ts  index.test.ts
src-backend/: Cargo.toml
src-backend/src/: audio.rs  camilla.rs  lib.rs  optim.rs  plot.rs
src-gpui/: Cargo.toml  README.md
src-gpui/examples/: README.md  audio_interface.rs  routing_matrix.rs
src-gpui/src/: app_setup.rs  design.rs  lib.rs  main.rs  theme.rs
src-gpui/src/components/: about_modal.rs  audio_capture.rs  audio_interface.rs  audio_player.rs  eq_customization.rs  eq_design.rs  filter_display.rs  frequency_plot.rs  mod.rs  routing_matrix.rs  workflow_navigator.rs
src-gpui/src/workflows/: headphone.rs  mod.rs  room.rs  speaker.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs
src-ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
src-ui/assets/autoeq.icon/: icon.json
src-ui/src/: main.ts  styles.css
src-ui/src-tauri/: Cargo.toml  tauri.conf.json
src-ui/src-tauri/binaries/: .gitignore
src-ui/src-tauri/capabilities/: main.json
src-ui/src-tauri/src/: lib.rs
src-ui/src/modules/: api-manager.ts  audio-manager-rust.ts  index.ts  templates.ts  ui-manager.ts
src-ui/src/modules/audio/: audio-interface.ts  audio-processor.ts  capture-controller.ts  capture-modal-manager.ts  csv-export.ts  device-info-ui.ts  device-manager.ts
src-ui/src/tests/: api-manager.test.ts  entitlements.test.ts
src-ui/src/tests/audio/: audio-math.test.ts  audio-processor.test.ts  capture-storage.test.ts  csv-export.test.ts  index.test.ts
src-ui/tests/: ui-manager-device-fix.test.ts
tests/: Cargo.toml
tests/src/: main.rs
