[workspace]
members = [
  "src-backend",
  "src-audio-capture/src-tauri",
  "src-ui/src-tauri"
]
resolver = "3"

[workspace.package]
version = "0.3.75"
description = "AutoEQ: optimise your speaker or your headset"
authors = ["pierre@spinorama.org"]
edition = "2024"

[workspace.dependencies]
# math
ndarray = { version = "0.16.0", features = ["blas", "serde"] }

# plot and input/output
cpal = "0.16.0"
csv = "1.3"
plotly = { version = "0.13" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"

# autoeq
autoeq = { version="0.2"}

# tauri
tauri = { version="2.8", features = [] }
tauri-plugin-opener = { version="2.5" }
tauri-plugin-dialog = { version="2.4" }
tauri-plugin-clipboard-manager = "2.3"
