[package]
name = "autoeq_backend"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "autoeq_backend"
path = "src/lib.rs"

[[bin]]
name = "audio_test"
path = "bin/audio_test.rs"

[dependencies]
autoeq = { workspace = true }
ndarray = { workspace = true }
plotly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
