[package]
name = "sotf"
version = "0.4.45"
description = "Automatic equalization for speakers, headphones and rooms!"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
cpal = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
log = { workspace = true }
ndarray = { workspace=true }
open = { workspace = true }
plotly = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

autoeq = { workspace = true }
autoeq_backend = { path = "../src-backend" }

[dev-dependencies]
# Testing
mockito = "1.2"
proptest = "1.4"
criterion = "0.5"

[lib]
name = "SotF"
path = "src/lib.rs"

[[bin]]
name = "SotF"
path = "src/main.rs"
