[package]
name = "autoeq-tauri"
version = "0.3.66"
description = "AutoEQ: optimise your speaker or your headset"
authors = ["pierre@spinorama.org"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoeq_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# math
ndarray = { version = "0.16.0", features = ["blas", "serde"] }

# plot and input/output
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
serde_json = "1"
csv = "1.3"
plotly = { version = "0.13" }
# plotly = { version = "0.13", features = ["static_export_default"] }
# plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"] }

# autoeq
autoeq = { version="0.2"}

# tauri
tauri = { version="~2.8", features = [] }
tauri-plugin-opener = { version="~2.5" }
tauri-plugin-dialog = { version="~2.4" }
tauri-plugin-clipboard-manager = "~2.3"
cpal = "0.16.0"

[build-dependencies]
tauri-build = { version="~2.4", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "~2.3"

[target.'cfg(target_os = "macos")'.dependencies]
# BLAS: Use Accelerate framework on macOS
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
# BLAS: Use OpenBLAS on Linux
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
# BLAS: Use Intel MKL on Windows x86_64
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = "0.8.1"

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
# BLAS: Intel MKL not supported on ARM, use OpenBLAS
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
