[package]
name = "autoeq-audio-capture"
version = "0.1.1"
edition = {workspace=true}

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoeq_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
autoeq_backend = { path = "../../src-backend" }
ndarray = { workspace=true }
tokio = { workspace=true }
serde = { workspace=true }
reqwest = { workspace=true }
urlencoding = { workspace=true }
serde_json = { workspace=true }
csv = { workspace=true }
plotly = { workspace=true }
autoeq = { version="0.2"}
cpal = { workspace=true }
# tauri
tauri = { workspace=true }
tauri-plugin-opener = { workspace=true }
tauri-plugin-dialog = { workspace=true }
tauri-plugin-clipboard-manager = { workspace=true }


[build-dependencies]
tauri-build = { version="2.4", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
# BLAS: Use Accelerate framework on macOS
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
# BLAS: Use OpenBLAS on Linux
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
# BLAS: Use Intel MKL on Windows x86_64
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = "0.8.1"

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
# BLAS: Intel MKL not supported on ARM, use OpenBLAS
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
