[package]
name = "autoeq-ui"
version = "0.3.75"
description = "AutoEQ: optimise your speaker or your headset"
authors = ["pierre@spinorama.org"]
edition = "2024"

[lib]
name = "autoeq_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
cpal = { workspace=true }
csv = { workspace=true }
ndarray = { workspace=true }
plotly = { workspace=true }
tokio = { workspace=true }
reqwest = { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
urlencoding = { workspace=true }

# autoeq
autoeq = { version="0.2"}
autoeq_backend = { path = "../../src-backend" }

# tauri
tauri = { workspace=true , features = [] }
tauri-plugin-opener = { workspace=true }
tauri-plugin-dialog = { workspace=true }
tauri-plugin-clipboard-manager = { workspace=true }

[build-dependencies]
tauri-build = { version="2.4", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
# BLAS: Use Accelerate framework on macOS
blas-src = { version = "0.14", features = ["accelerate"] }
accelerate-src = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
# BLAS: Use OpenBLAS on Linux
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
# BLAS: Use Intel MKL on Windows x86_64
blas-src = { version = "0.14", features = ["intel-mkl-dynamic-parallel"] }
intel-mkl-src = "0.8.1"

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
# BLAS: Intel MKL not supported on ARM, use OpenBLAS
blas-src = { version = "0.14", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
